--- a/TuttiExample/UI/TutorialViewController.xib
+++ b/TuttiExample/UI/TutorialViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,6 +13,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TutorialViewController" customModule="Tutti">
             <connections>
                 <outlet property="closeButton" destination="dAw-7g-M10" id="imi-Eu-Db9"/>
+                <outlet property="collectionView" destination="pzv-lu-gK5" id="wQW-SU-ImX"/>
+                <outlet property="nextButton" destination="BhW-er-PVL" id="l2U-3J-qfy"/>
+                <outlet property="pageControl" destination="Qto-vF-Flo" id="2X6-8J-DhT"/>
+                <outlet property="previousButton" destination="zZQ-LN-m5x" id="02L-TB-Ph6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,22 +26,66 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAw-7g-M10">
-                    <rect key="frame" x="215" y="40" width="140" height="36"/>
+                    <rect key="frame" x="278" y="40" width="77" height="36"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                    <state key="normal" title="IB: Close Button">
+                    <state key="normal" title="IB: Close">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="dismissTutorial:" destination="-1" eventType="touchUpInside" id="Q7P-Q7-Kbn"/>
                     </connections>
                 </button>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="pzv-lu-gK5">
+                    <rect key="frame" x="0.0" y="96" width="375" height="495"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mMm-xw-0SO">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZQ-LN-m5x">
+                    <rect key="frame" x="20" y="611" width="66" height="36"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                    <state key="normal" title="IB: Prev">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="dismissTutorial:" destination="-1" eventType="touchUpInside" id="24L-uK-Fwf"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BhW-er-PVL">
+                    <rect key="frame" x="286" y="611" width="69" height="36"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                    <state key="normal" title="IB: Next">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="dismissTutorial:" destination="-1" eventType="touchUpInside" id="KHj-Ez-7iQ"/>
+                    </connections>
+                </button>
+                <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Qto-vF-Flo">
+                    <rect key="frame" x="168" y="611" width="39" height="37"/>
+                </pageControl>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="dAw-7g-M10" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="1Pe-sC-H9b"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="zZQ-LN-m5x" secondAttribute="bottom" constant="20" id="3Ic-g7-bve"/>
+                <constraint firstItem="Qto-vF-Flo" firstAttribute="centerX" secondItem="pzv-lu-gK5" secondAttribute="centerX" id="7zJ-td-DPQ"/>
+                <constraint firstItem="zZQ-LN-m5x" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="K59-HW-g7W"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pzv-lu-gK5" secondAttribute="trailing" id="Lrp-Um-zW9"/>
+                <constraint firstItem="Qto-vF-Flo" firstAttribute="centerY" secondItem="zZQ-LN-m5x" secondAttribute="centerY" id="OvU-6o-Bu3"/>
+                <constraint firstItem="zZQ-LN-m5x" firstAttribute="top" secondItem="pzv-lu-gK5" secondAttribute="bottom" constant="20" id="Pg4-hM-ziv"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="dAw-7g-M10" secondAttribute="trailing" constant="20" id="Qmo-9j-ojJ"/>
+                <constraint firstItem="pzv-lu-gK5" firstAttribute="top" secondItem="dAw-7g-M10" secondAttribute="bottom" constant="20" id="Td0-VM-BzI"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="BhW-er-PVL" secondAttribute="trailing" constant="20" id="XGe-G2-0H6"/>
+                <constraint firstItem="BhW-er-PVL" firstAttribute="bottom" secondItem="zZQ-LN-m5x" secondAttribute="bottom" id="ZgV-Tf-UY3"/>
+                <constraint firstItem="pzv-lu-gK5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="qLD-00-Ft3"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
     </objects>
 </document>
