Improve tutorial page handling

--- a/TuttiExample/UI/TutorialViewController.xib
+++ b/TuttiExample/UI/TutorialViewController.xib
@@ -37,7 +37,7 @@
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="pzv-lu-gK5">
                     <rect key="frame" x="0.0" y="96" width="375" height="495"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mMm-xw-0SO">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -52,7 +52,7 @@
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="dismissTutorial:" destination="-1" eventType="touchUpInside" id="24L-uK-Fwf"/>
+                        <action selector="showPreviousPage:" destination="-1" eventType="touchUpInside" id="xHh-02-MJb"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BhW-er-PVL">
@@ -62,7 +62,7 @@
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="dismissTutorial:" destination="-1" eventType="touchUpInside" id="KHj-Ez-7iQ"/>
+                        <action selector="showNextPage:" destination="-1" eventType="touchUpInside" id="lfE-4w-iwu"/>
                     </connections>
                 </button>
                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Qto-vF-Flo">
