--- a/TuttiExample/UI/TutorialViewControllerCell.xib
+++ b/TuttiExample/UI/TutorialViewControllerCell.xib
@@ -13,30 +13,67 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TutorialViewControllerCell" customModule="Tutti">
-            <rect key="frame" x="0.0" y="0.0" width="394" height="407"/>
+            <rect key="frame" x="0.0" y="0.0" width="514" height="550"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="394" height="407"/>
+                <rect key="frame" x="0.0" y="0.0" width="514" height="550"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2G4-wg-mSf">
-                        <rect key="frame" x="154" y="139.5" width="240" height="128"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E4m-F9-xUc">
+                        <rect key="frame" x="132" y="85" width="250" height="400"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aja-ug-oLV">
+                                <rect key="frame" x="0.0" y="0.0" width="250" height="31.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="x2Y-o8-akN">
+                                <rect key="frame" x="0.0" y="52" width="250" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="7kh-i2-aCp"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yLo-5Y-dbT">
+                                <rect key="frame" x="0.0" y="200" width="250" height="200"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="240" id="aUH-xU-zW5"/>
-                            <constraint firstAttribute="height" constant="128" id="d9c-E8-vko"/>
+                            <constraint firstItem="aja-ug-oLV" firstAttribute="top" secondItem="E4m-F9-xUc" secondAttribute="top" id="26P-jn-9Uv"/>
+                            <constraint firstItem="x2Y-o8-akN" firstAttribute="centerX" secondItem="aja-ug-oLV" secondAttribute="centerX" id="5eg-3I-vzJ"/>
+                            <constraint firstItem="aja-ug-oLV" firstAttribute="leading" secondItem="E4m-F9-xUc" secondAttribute="leading" id="84o-LI-Ip0"/>
+                            <constraint firstAttribute="height" constant="400" id="9cn-Uz-pOp"/>
+                            <constraint firstItem="x2Y-o8-akN" firstAttribute="top" secondItem="aja-ug-oLV" secondAttribute="bottom" constant="20" id="CHM-gW-lKI"/>
+                            <constraint firstItem="yLo-5Y-dbT" firstAttribute="trailing" secondItem="x2Y-o8-akN" secondAttribute="trailing" id="Iys-Wp-1Q7"/>
+                            <constraint firstAttribute="width" constant="250" id="OG7-M0-sfK"/>
+                            <constraint firstItem="x2Y-o8-akN" firstAttribute="leading" secondItem="aja-ug-oLV" secondAttribute="leading" id="bAI-Xp-fZg"/>
+                            <constraint firstItem="yLo-5Y-dbT" firstAttribute="leading" secondItem="x2Y-o8-akN" secondAttribute="leading" id="bLD-js-1jw"/>
+                            <constraint firstItem="yLo-5Y-dbT" firstAttribute="top" secondItem="x2Y-o8-akN" secondAttribute="bottom" constant="20" id="fVo-j5-IMR"/>
+                            <constraint firstItem="x2Y-o8-akN" firstAttribute="trailing" secondItem="aja-ug-oLV" secondAttribute="trailing" id="pag-sj-234"/>
+                            <constraint firstAttribute="trailing" secondItem="aja-ug-oLV" secondAttribute="trailing" id="qM9-kT-ATF"/>
+                            <constraint firstAttribute="bottom" secondItem="yLo-5Y-dbT" secondAttribute="bottom" id="xqb-d0-Xle"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <color key="backgroundColor" red="1" green="0.1326254204" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="2G4-wg-mSf" firstAttribute="centerY" secondItem="ZTg-uK-7eu" secondAttribute="centerY" id="bgX-T3-vcW"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="2G4-wg-mSf" secondAttribute="trailing" id="jVV-74-Lwy"/>
+                <constraint firstItem="E4m-F9-xUc" firstAttribute="centerY" secondItem="ZTg-uK-7eu" secondAttribute="centerY" id="4xP-KV-gI5"/>
+                <constraint firstItem="E4m-F9-xUc" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="cgc-HL-ncO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="394" height="407"/>
-            <point key="canvasLocation" x="198" y="230.5"/>
+            <size key="customSize" width="514" height="550"/>
+            <connections>
+                <outlet property="imageView" destination="x2Y-o8-akN" id="XW0-ug-z4F"/>
+                <outlet property="textView" destination="yLo-5Y-dbT" id="BT0-7Z-Byb"/>
+                <outlet property="titleLabel" destination="aja-ug-oLV" id="sRO-Ip-zO9"/>
+            </connections>
+            <point key="canvasLocation" x="258" y="302"/>
         </collectionViewCell>
     </objects>
 </document>
