--- a/TuttiExample/Base.lproj/Main.storyboard
+++ b/TuttiExample/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Tutti Example" id="bcz-ik-k01">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="button_account" style="plain" id="blb-Le-017">
+                        <barButtonItem key="rightBarButtonItem" image="button_account" id="blb-Le-017">
                             <connections>
                                 <action selector="setupUser:" destination="BYZ-38-t0r" id="fgv-Kt-P1x"/>
                             </connections>
